--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=DESKTOP-KFBAS3H;Initial Catalog=GymDatabase;Integrated Security=True"
-    "DefaultConnection": "Data Source=DESKTOP-KFBAS3H;Initial Catalog=GymDatabase_Test;Integrated Security=True"
+    "DefaultConnection": "Data Source=DESKTOP-KFBAS3H;Initial Catalog=GymFinalDB;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
